# cs5530-assignment1

./: README.md  pyproject.toml  question_1.ipynb  question_2.ipynb
data/: question_1.csv
